package model;

public enum OrderStatus {
    PENDING, IN_PROGRESS, DELIVERED; 
    
}
